# etchteateapee

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  compile_commands.json  dist.makefile  tmp
docs/: LICENSE.md
etch/http/: server.c
etch/http/response/: parse.c
etch/include/etch/: http.h
etch/include/etch/core/: config.h
etch/include/etch/http/: request.h  response.h
examples/: static_file.c
include/: etch.h
include/etch/: config.h  core.h  etch.h  header.h  http.h  request.h  response.h  server.h  utils.h
include/etch/core/: config.h  debug.h  utils.h
include/etch/http/: header.h  request.h  response.h  server.h
res/: index.html
res/foo/: index.html
scripts/: build  docs  fmt
src/: Makefile  config.c  connection.c  connection.h  header.c  main.c  request.c  response.c  response_serve_file.c  server.c  utils.c
src/core/: config.c
src/etch/: Makefile
src/etch/core/: Makefile  config.c  utils.c
src/etch/http/: Makefile  header.c  request.c  server.c
src/etch/http/response/: Makefile
src/http/: header.c  request.c
src/http/response/: parse.c  serve_file.c
tests/: CMakeLists.txt
tests/http/: CMakeLists.txt  test_headers.cc
